; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/extr_aspeed-video.c_aspeed_video_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/extr_aspeed-video.c_aspeed_video_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.aspeed_video = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*)* @aspeed_video_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aspeed_video_release(%struct.file* %0) #0 {
  %2 = alloca %struct.file*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.aspeed_video*, align 8
  store %struct.file* %0, %struct.file** %2, align 8
  %5 = load %struct.file*, %struct.file** %2, align 8
  %6 = call %struct.aspeed_video* @video_drvdata(%struct.file* %5)
  store %struct.aspeed_video* %6, %struct.aspeed_video** %4, align 8
  %7 = load %struct.aspeed_video*, %struct.aspeed_video** %4, align 8
  %8 = getelementptr inbounds %struct.aspeed_video, %struct.aspeed_video* %7, i32 0, i32 0
  %9 = call i32 @mutex_lock(i32* %8)
  %10 = load %struct.file*, %struct.file** %2, align 8
  %11 = call i64 @v4l2_fh_is_singular_file(%struct.file* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.aspeed_video*, %struct.aspeed_video** %4, align 8
  %15 = call i32 @aspeed_video_stop(%struct.aspeed_video* %14)
  br label %16

16:                                               ; preds = %13, %1
  %17 = load %struct.file*, %struct.file** %2, align 8
  %18 = call i32 @_vb2_fop_release(%struct.file* %17, i32* null)
  store i32 %18, i32* %3, align 4
  %19 = load %struct.aspeed_video*, %struct.aspeed_video** %4, align 8
  %20 = getelementptr inbounds %struct.aspeed_video, %struct.aspeed_video* %19, i32 0, i32 0
  %21 = call i32 @mutex_unlock(i32* %20)
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local %struct.aspeed_video* @video_drvdata(%struct.file*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @v4l2_fh_is_singular_file(%struct.file*) #1

declare dso_local i32 @aspeed_video_stop(%struct.aspeed_video*) #1

declare dso_local i32 @_vb2_fop_release(%struct.file*, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
